# file_saver_ffi.flutter

./: .gitignore  .metadata  README.md  ffigen.yaml  pubspec.yaml
android/: .gitignore  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/vanvixi/file_saver_ffi/: AudioSaver.kt  BaseFileSaver.kt  FileSaver.kt  (+3 more)
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/lib/core/: core.dart  media_saver_mixin.dart  utils.dart  widgets.dart
example/lib/tabs/: file_tab.dart  image_tab.dart  tabs.dart  video_tab.dart
ios/: file_saver_ffi.podspec
ios/Classes/: file_saver_ffi.c
ios/Classes/FileSaver/Core/: AudioSaver.swift  BaseFileSaver.swift  CustomFileSaver.swift  FileSaver.swift  ImageSaver.swift  VideoSaver.swift
ios/Classes/FileSaver/FFI/: FileSaverFFI.swift  file_saver_ffi.h
ios/Classes/FileSaver/Models/: ConflictResolution.swift  FileSaverError.swift  FileType.swift  SaveResult.swift
ios/Classes/FileSaver/Utils/: Constants.swift  FileHelper.swift  FileManagerConflictResolver.swift  FormatValidator.swift  PhotosConflictResolver.swift
lib/: file_saver_ffi.dart  file_saver_ffi_bindings_generated.dart
lib/src/exceptions/: file_saver_exceptions.dart
lib/src/models/: conflict_resolution.dart  file_type.dart  save_result.dart
lib/src/platform_interface/: file_saver_platform.dart
src/: CMakeLists.txt  file_saver_ffi.c
(+11 files in other folders)
